--- a/src/app/components/pages/new-moment/new-moment.component.html
+++ b/src/app/components/pages/new-moment/new-moment.component.html
@@ -1,2 +1,4 @@
-<h2>Share your best <span>Moment</span>!</h2>
-<app-newmoment-form [btnText]="btnText"></app-newmoment-form>
+<main>
+  <h2>Share your best <span>Moment</span>!</h2>
+  <app-newmoment-form [btnText]="btnText"></app-newmoment-form>
+</main>
