--- a/src/app/components/pages/new-moment/new-moment.component.html
+++ b/src/app/components/pages/new-moment/new-moment.component.html
@@ -1,4 +1,7 @@
 <main>
   <h2>Share your best <span>Moment</span>!</h2>
-  <app-newmoment-form [btnText]="btnText"></app-newmoment-form>
+  <app-newmoment-form
+    [btnText]="btnText"
+    (onSubmit)="createHandler($event)"
+  ></app-newmoment-form>
 </main>
