Masonry Grid and Search For Moments added

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -5,9 +5,8 @@ footer {
   align-items: center;
   justify-content: center;
   height: 150px;
-  position: absolute;
-  bottom: 0;
   width: 100%;
+  background-color: #fefefe;
 }
 
 footer h3 {
