--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -9,8 +9,8 @@ footer {
   background-color: #fefefe;
 }
 
-footer h3 {
-  margin-bottom: 1.3em;
+.moments-copy {
+  margin: 1.3em;
 }
 
 footer span {
