--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,10 @@
 <footer>
   <h3>Share your best moments!</h3>
-  <p><span>Moments</span> &copy; 2023</p>
+  <p class="moments-copy"><span>Moments</span> &copy; 2023</p>
+  <p>
+    Coded by:
+    <a target="_blank" href="https://www.linkedin.com/in/lucca-sa/"
+      ><span>Lucca Sá</span></a
+    >
+  </p>
 </footer>
