--- a/src/app/components/pages/moment/moment.component.html
+++ b/src/app/components/pages/moment/moment.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="actions">
     <h3>Ações:</h3>
-    <a href="/moments/edit/{{ moment.id }}" class="edit-btn">
+    <a routerLink="/moments/edit/{{ moment.id }}" class="edit-btn">
       <fa-icon [icon]="faEdit"></fa-icon>Edit
     </a>
     <button class="remove-btn" (click)="removeHandler(moment.id!)">
