--- a/src/app/components/pages/moment/moment.component.css
+++ b/src/app/components/pages/moment/moment.component.css
@@ -35,16 +35,54 @@ img {
   margin-bottom: 1em;
   padding: 1.5em 0;
   border-top: 1px solid #ccc;
+  width: 100%;
 }
 
 .actions,
 .comments,
 .about-moment {
-  width: 40%;
+  width: 60%;
 }
 
 .about-moment h3,
 .actions h3,
 .comments h3 {
   margin-bottom: 1em;
+}
+
+.comment-container {
+  text-align: left;
+  padding: 1em 0;
+  border-bottom: 1px solid #efefef;
+}
+
+.comment {
+  font-size: 0.9em;
+}
+
+.author {
+  font-size: 0.8em;
+}
+
+.comment-form {
+  margin-bottom: 3em;
+}
+
+.comment-form form {
+  margin-top: 1em;
+  text-align: left;
+  max-width: 100%;
+  margin-left: 0;
+  width: 100%;
+}
+
+.comment-form {
+  margin-top: 1em;
+}
+.author span {
+  font-weight: bold;
+}
+
+.form-group {
+  width: 100%;
 }
